--- a/lab3/src/main/resources/application.properties
+++ b/lab3/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=lab3
 # MySQL Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/springboot_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 # JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
